# tech_europe_paris_ai_hackathon

./: .gitignore  CONTEXT.md  README.md  uv_reset.sh
RND/cutter/: main.py  pyproject.toml
RND/separation/: LEARNINGS.md  README.md  STEM_SEPARATION_PROMPT.md  TOOLS_OVERVIEW.md  TROUBLESHOOTING.md
RND/separation/demucs/: LEARNINGS.md  README.md  main.py  pyproject.toml  test_main.py
RND/separation/openunmix/: LEARNINGS.md  README.md  main.py  pyproject.toml  test_main.py
RND/separation/spleeter/: LEARNINGS.md  README.md  main.py  pyproject.toml  test_main.py
RND/separation/vianney/spleeter_x/: README.md  main.py  pyproject.toml
RND/separation/vianney/spleeter_x/output/test/: README.md
RND/stt/: GRADIUM_STT_EXPERIMENT.md  gradium_transcribe.py
RND/textual_lyrics/: DRAFT.md  TASK_PROMPT.md  main.py  pyproject.toml
sounds_good_enough/: .gitignore  PROMPT.md  README.md
sounds_good_enough/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
sounds_good_enough/backend/app/: __init__.py  config.py  main.py  models.py
sounds_good_enough/backend/app/api/: __init__.py  routes.py
sounds_good_enough/backend/app/services/: __init__.py  downloader.py  separator.py  transcriber.py  video_source.py
sounds_good_enough/backend/tests/: conftest.py  test_api.py  test_separator.py  test_transcriber.py
sounds_good_enough/frontend/: index.html  package-lock.json  package.json  tsconfig.json
sounds_good_enough/frontend/src/: App.css  App.tsx
sounds_good_enough/frontend/src/api/: client.ts
sounds_good_enough/frontend/src/components/: KaraokePlayer.css  KaraokePlayer.tsx  ProcessingStatus.css  ProcessingStatus.tsx  Results.tsx  UploadZone.tsx
